# sol-safekey-ui

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  README_CN.md  build.sh  dev.sh  main.rs  next.config.ts  package-lock.json  package.json  start.sh
scripts/: ensure-out.cjs  free-api-port.cjs
src/: main.rs  middleware.ts  middleware.ts.disabled
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: proxy.toml
src-tauri/src/: lib.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/[locale]/: layout.tsx  page.tsx
src/components/: LanguageSwitcher.tsx  providers.tsx
src/hooks/: useTranslations.ts
src/i18n/: request.ts
src/lib/: api.ts  apiFetch.ts
src/messages/: en.json  zh.json
