[package]
name = "sol-safekey-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
sol-safekey = "0.3.3"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-embed = "8.5"
mime_guess = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
rina = "0.1"
