[package]
name = "sol-safekey-ui"
version = "0.4.0"
edition = "2021"

[[bin]]
name = "sol-safekey-ui"
path = "main.rs"

[dependencies]
sol-safekey = { path = "../sol-safekey", features = ["solana-ops", "2fa", "sol-trade-sdk"] }
solana-client = "3.1"
solana-sdk = "3.0"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-embed = "8.5"
mime_guess = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
spl-token = "6.0"
urlencoding = "2.1"
